--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
   <a-scene>
-    <a-videosphere src="v1.mp4" rotation="0 180 0"></a-videosphere>
+    <a-videosphere src="https://www.youtube.com/watch?v=FPiZ7z6lU54&pp=ygUJdnIgdmlkZW8g" rotation="0 180 0"></a-videosphere>
     <!-- You can adjust the rotation attribute to change the initial orientation of the video -->
   </a-scene>
 </body>
