--- a/index.html
+++ b/index.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Embedded Video from Google Drive</title>
 </head>
 <body>
-  <a-scene>
-    <a-videosphere src="https://www.youtube.com/watch?v=FPiZ7z6lU54&pp=ygUJdnIgdmlkZW8g" rotation="0 180 0"></a-videosphere>
-    <!-- You can adjust the rotation attribute to change the initial orientation of the video -->
-  </a-scene>
+
+  <h1>VR Video</h1>
+
+  <!-- Replace 'YourFileID' with the actual ID of your video file -->
+  <iframe src="https://drive.google.com/file/d/1APcrbCbmWmzYa5mJ1JknoXxc2OLmhyT1/view?usp=sharing" width="640" height="480" frameborder="0" allowfullscreen="true" webkitallowfullscreen="true" mozallowfullscreen="true"></iframe>
+
 </body>
 </html>
