--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Embedded Video from Google Drive</title>
+  <title>Embedded YouTube Video</title>
 </head>
 <body>
 
   <h1>VR Video</h1>
 
-  <!-- Replace 'YourFileID' with the actual ID of your video file -->
-  <iframe src="https://drive.google.com/file/d/1APcrbCbmWmzYa5mJ1JknoXxc2OLmhyT1/view?usp=sharing" width="640" height="480" frameborder="0" allowfullscreen="true" webkitallowfullscreen="true" mozallowfullscreen="true"></iframe>
+  <!-- Replace 'YourYouTubeVideoID' with the actual ID of your YouTube video -->
+  <iframe width="560" height="315" src="https://youtu.be/FPiZ7z6lU54" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 </body>
 </html>
